# HCGateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  commitlint.config.js  docker-compose.yml  lefthook.yml  mise.toml  nixpacks.toml  package.json
.github/workflows/: ghcr-ci.yaml
api/: .dockerignore  .env.example  Dockerfile  crypto.py  main.py  pyproject.toml  static_web.py  utils.py
api/apiVersions/v2/: __init__.py  routes.py
api/tests/: conftest.py  test_docker_packaging.py  test_main_registration.py  test_registration_flag.py  test_static_web.py
api/web/: .prettierignore  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.app.json  tsr.config.json  vite.config.ts
api/web/src/: main.tsx  styles.css
api/web/src/components/: AppShell.tsx  AuthedErrorBoundary.tsx  CountCard.tsx  JsonDialog.tsx  RecordChart.tsx  RecordTable.tsx  SovereigntyBadge.tsx  Sparkline.tsx  SummaryCard.tsx  WindowSelector.tsx
api/web/src/components/ui/: alert.tsx  button.tsx  card.tsx  chart.tsx  dialog.tsx  input.tsx  label.tsx  table.tsx
api/web/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  authGuard.test.ts  authGuard.ts  dashboard.test.ts  dashboard.ts  queries.test.ts  queries.ts  recordDetail.test.ts  recordDetail.ts  recordTypes.test.ts  recordTypes.ts  shell.test.ts  shell.ts  transforms.test.ts  transforms.ts  utils.test.ts
api/web/src/routes/: __root.tsx  _authed.test.tsx  _authed.tsx  login.test.tsx  login.tsx
api/web/src/routes/_authed/: index.test.tsx  index.tsx  records.$type.test.tsx  records.$type.tsx  settings.test.tsx  settings.tsx
api/web/src/test/: build.integration.test.ts  setup.ts  smoke.test.tsx
app/: .editorconfig  build.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/dev/shuchir/hcgateway/: HCGatewayApp.kt
app/app/src/main/java/dev/shuchir/hcgateway/di/: AppModule.kt  HealthConnectModule.kt
app/app/src/main/res/xml/: network_security_config.xml
app/config/detekt/: baseline.xml  detekt.yml
app/gradle/: libs.versions.toml
(+32 files in other folders)
