[project]
name = "hcgateway-api"
version = "3.0.0"
description = "HCGateway REST API server — Flask + MongoDB backend for Health Connect sync"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi==23.1.0",
    "cryptography==44.0.1",
    "Flask==3.0.3",
    "Flask-Cors==6.0.0",
    "Flask-Limiter==3.8.0",
    "gunicorn==23.0.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sentry-sdk==2.16.0",
    "pyfcm==2.0.7",
    "pymongo==4.10.1",
]

[tool.uv]
package = false
